--- a/src/css/arvore.css
+++ b/src/css/arvore.css
@@ -59,6 +59,46 @@ iframe{
    
 }
 
+@media screen and (max-width:728px){
+
+    .container{
+        display:flex;
+       width:100%;
+        height:100%;
+    }
+
+
+    .iframe-video{
+        position: relative;
+        padding-bottom: 56.25%; /* 16:9 */
+        padding-top: 25px;
+        height: 0;
+        
+    
+    }
+
+    .iframe-video iframe{
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        margin-left: 15px;
+    }
+
+    iframe{
+        width: 550px;
+        height: 400px;
+    }
+
+    .images{
+        display:flex;
+        align-items: center;
+        margin-right:18px ;
+    }
+
+
+}
+
 
 
 
