--- a/src/css/arvore.css
+++ b/src/css/arvore.css
@@ -71,8 +71,9 @@ iframe{
     .iframe-video{
         position: relative;
         padding-bottom: 56.25%; /* 16:9 */
-        padding-top: 25px;
+        padding-top: 15px;
         height: 0;
+        margin-top:-5px;
         
     
     }
@@ -87,7 +88,7 @@ iframe{
 
     iframe{
         width: 550px;
-        height: 400px;
+        height: 500px;
     }
 
     .images{
