--- a/src/css/perfil.css
+++ b/src/css/perfil.css
@@ -17,7 +17,7 @@
 .kaue{
     color: rgb(0, 255, 179);
     font-weight: 600;
-    font-family:'Permanent Marker', 'Ubuntu';
+    font-family:'Permanent Marker', 'Ubuntu',sans-serif;
     margin-left:20px;
 }
 
