--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 :root{
     --fundo:rgb(255, 255, 255);
-    --btn:rgb(255, 255, 255);
+    --btn:#fff;
 
 }
 
@@ -23,6 +23,7 @@ body{
     align-items: center;
     width: 100%;
     height: 100%;
+   
     
    
 }
@@ -30,7 +31,7 @@ body{
 .container-fluid{
     width: 80%;
     height: 80%;
-
+   
 }
 
 
